--- a/src/app/element/index.jade
+++ b/src/app/element/index.jade
@@ -3,8 +3,7 @@ extends ../_layout
 
 block vars
 
-  - var page = {title: 'Элементы', url: 'element', type: 'list', class: 'list element', content: {}, list: []}
-
+  - var page = {title: 'Элементы', url: 'element', type: 'list', class: 'list element', content: {}, list: []};
 
   - page.list.push({title: 'Арка', link: 'arc'})
   - page.list.push({title: 'Centerpiece', link: 'centerpiece'})
