--- a/src/app/index.jade
+++ b/src/app/index.jade
@@ -2,8 +2,7 @@ extends _layout
 
 block vars
 
-  - var page = {title: 'Главная', url: '', type: 'home', class: 'home list', content: {},list: []}
-  //- - var list = []
+  - var page = {title: 'Главная', url: '', type: 'home', class: 'home list', content: {},list: []};
 
   - page.list.push({title: 'Стиль свадьбы', link: 'style'})
   - page.list.push({title: 'Цвет свадьбы', link: 'color'})
