--- a/src/app/style/index.jade
+++ b/src/app/style/index.jade
@@ -2,7 +2,7 @@ extends ../_layout
 
 
 block vars
-  - var page = {title: 'Стиль свадьбы', url: 'style', type: 'list', class: 'list style', content: {}, list: []}
+  - var page = {title: 'Стиль свадьбы', url: 'style', type: 'list', class: 'list style', content: {}, list: []};
 
   - page.list.push({title: 'Рустик', link: 'rustic'})
   - page.list.push({title: 'Лесная', link: 'forest'})
