--- a/src/app/style/national/index.jade
+++ b/src/app/style/national/index.jade
@@ -2,8 +2,7 @@ extends ../../_layout
 
 
 block vars
-  - var page = {title: 'Национальные свадьбы', url: 'style/national', type: 'list', class: 'style list national', content: {}, list: [], breadcrumbs: [{link: 'style', name: 'Стиль свадьбы'}]}
-
+  - var page = {title: 'Национальные свадьбы', url: 'style/national', type: 'list', class: 'style list national', content: {}, list: [], breadcrumbs: [{link: 'style', name: 'Стиль свадьбы'}]};
 
   - page.list.push({title: 'Китай', link: 'china'})
   - page.list.push({title: 'Индия', link: 'india'})
