--- a/src/app/style/travel/index.jade
+++ b/src/app/style/travel/index.jade
@@ -2,7 +2,7 @@ extends ../../_layout
 
 
 block vars
-  - var page = {title: 'Путешествия', url: 'style/travel', type: 'list', class: 'list travel', content: {}, list: [], breadcrumbs: [{link: 'style', name: 'Стиль свадьбы'}]}
+  - var page = {title: 'Путешествия', url: 'style/travel', type: 'list', class: 'list travel', content: {}, list: [], breadcrumbs: [{link: 'style', name: 'Стиль свадьбы'}]};
 
   - page.list.push({title: 'Венеция', link: 'venice'})
   - page.list.push({title: 'Лондон', link: 'london'})
