--- a/src/app/zone/index.jade
+++ b/src/app/zone/index.jade
@@ -2,8 +2,7 @@ extends ../_layout
 
 
 block vars
-  - var page = {title: 'Зоны', url: 'zone', type: 'list', class: 'list zone', content: {}, list: []}
-
+  - var page = {title: 'Зоны', url: 'zone', type: 'list', class: 'list zone', content: {}, list: []};
 
   - page.list.push({title: 'Выездная регистрация', link: 'registration'})
   - page.list.push({title: 'Президиум', link: 'presidium'})
