--- a/src/app/zone/registration/index.jade
+++ b/src/app/zone/registration/index.jade
@@ -4,7 +4,7 @@ block vars
 
   - var description = 'То, заветное место, куда жаждет попасть любая детская душа. Цирк. Аттракционы. Веселье.  Клоуны.</p><p>На этот вечер Ваша свадьба взорвется эмоциями радости добра и света.'
 
-  - var page = {title: 'Фотозона', url: 'zone/photo', type: 'zone-page', class: 'page zone photo', content: {desc: description}, list: [], breadcrumbs: [{link: 'zone', name: 'Оформление зон'}], slider: {path: 'zone/registration/registration-', qnt: 7}, button: {text: 'Заказать оформление фотозоны'}, list2 = []}
+  - var page = {title: 'Фотозона', url: 'zone/photo', type: 'zone-page', class: 'page zone photo', content: {desc: description}, list: [], breadcrumbs: [{link: 'zone', name: 'Оформление зон'}], slider: {path: 'zone/registration/registration-', qnt: 7}, button: {text: 'Заказать оформление фотозоны'}, list2: []}
 
   - page.list.push({title: 'Выездная регистрация', link: 'registration'})
   - page.list.push({title: 'Президиум', link: 'presidium'})
