--- a/src/app/color/index.jade
+++ b/src/app/color/index.jade
@@ -2,7 +2,7 @@ extends ../_layout
 
 
 block vars
-  - var page = {title: 'Цвет свадьбы', url: 'color', type: 'list', class: 'list color', content: {}, list: []}
+  - var page = {title: 'Цвет свадьбы', url: 'color', type: 'list', class: 'list color', content: {}, list: []};
 
   - page.list.push({title: 'Красная', link: 'red'})
   - page.list.push({title: 'Оранжевая', link: 'orange'})
@@ -15,7 +15,7 @@ block vars
   - page.list.push({title: 'Розовая', link: 'pink'})
   - page.list.push({title: 'Белая', link: 'white'})
 
-  - var page1 = {title: 'Тренды', url: 'color', type: 'list', class: 'list color', content: {}, list: [], nomenu: true}
+  - var page1 = {title: 'Тренды', url: 'color', type: 'list', class: 'list color', content: {}, list: [], nomenu: true};
 
   - page1.list.push({title: 'Розовый кварц', link: 'rose-quartz'})
   - page1.list.push({title: 'Персиковая', link: 'peach'})
