--- a/src/app/color/white/index.jade
+++ b/src/app/color/white/index.jade
@@ -2,9 +2,9 @@ extends ../../_layout
 
 block vars
 
-  - var symbol = '<h3>Символика</h3>'
-  - var mood = '<h3>Настроение</h3>'
-  - var combination = '<h3>Сочетания</h3>'
+  - var symbol = '<h3>Символика</h3>Белый цвет  - общепризнанный символ чистоты и непорочности. Ассоциируется с воспоминаниями детства и простоты. Универсальный, сочетаемы со всеми цветами цвет. В свадьбе символизирует чистоту чувств и начало новой жизни с чистого листа.'
+  - var mood = '<h3>Настроение</h3>Настроение классической традиционной свадьбы, идущей из глубины веков. Несмотря ни на какие модные тренды классика вечна. Для модности возможны вкрапления других цветов.'
+  - var combination = '<h3>Сочетания</h3>Беспроигрышно: с зеленым, желтым, розовым. Стильно: с элементами красного. Модные тренды: с бирюзовым.'
 
   - var page = {title: 'Белая', url: 'color/white', type: 'color-page', class: 'page color white', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/white/white-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать свадьбу'},}
 
