--- a/src/app/color/red/index.jade
+++ b/src/app/color/red/index.jade
@@ -2,9 +2,9 @@ extends ../../_layout
 
 block vars
 
-  - var symbol = '<h3>Символика</h3>'
-  - var mood = '<h3>Настроение</h3>'
-  - var combination = '<h3>Сочетания</h3>'
+  - var symbol = '<h3>Символика</h3>Красный цвет издревле на Руси имел значение «красивый».  Красный – это общепризнанный цвет любви. В некоторых культурах (например, Китай) – это обязательный цвет свадебной церемонии.'
+  - var mood = '<h3>Настроение</h3>Это цвет борьбы, страсти острых чувств, пламени. Цвет горячего, красного, влюбленного сердца. Цвет яркий, жгучий без полутонов. Цвет танго и горячей крови.'
+  - var combination = '<h3>Сочетания</h3>Беспроигрышно: с белым, зеленым, золотым. Стильно: с элементами розового. Модные тренды: с бирюзовым, зеленой и красной клеткой.'
 
   - var page = {title: 'Красная', url: 'color/red', type: 'color-page', class: 'page color red', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/red/red-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать свадьбу'},}
 
