--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -74,6 +74,7 @@ a, p, h1, h2, h3
   padding: 1rem 2rem
   color: white
   background-color: $color-pink
+  align-self: center
 
 
 // link to font http://fonts4web.ru/Helvetica.html#test
