--- a/src/app/_nav.jade
+++ b/src/app/_nav.jade
@@ -1,8 +1,8 @@
 .nav
   .left
-    a(href='/').link-contact Контакты
+    a(href='/contact').link-contact Контакты
   .right
-    a(href='/').link-about О нас
+    a(href='/about').link-about О нас
 
 
   //- .home
