--- a/src/app/color/brown/index.jade
+++ b/src/app/color/brown/index.jade
@@ -2,11 +2,11 @@ extends ../../_layout
 
 block vars
 
-  - var symbol = '<h3>Символика</h3>Коричневый цвет обволакивает, символизирует уют и защищенность. В свадьбах символизирует будущий семейный комфорт,  умиротворение, теплый домашний очаг. Ассоциация с цветом шоколада дарит ассоциацию со сладкой жизнью.'
-  - var mood = '<h3>Настроение</h3>Создает настроение спокойствия, тепла, надежности. Часто используется в осенних свадьбах. Коричневые элементы практически в любой свадьбе – смотрятся красиво.'
-  - var combination = '<h3>Сочетания</h3>Беспроигрышно: с белым, оранжевым, розовым. Стильно: с элементами золота. Модные тренды: с бирюзовым.'
+  - var symbol = 'Коричневый цвет обволакивает, символизирует уют и защищенность. В свадьбах символизирует будущий семейный комфорт,  умиротворение, теплый домашний очаг. Ассоциация с цветом шоколада дарит ассоциацию со сладкой жизнью.'
+  - var mood = 'Создает настроение спокойствия, тепла, надежности. Часто используется в осенних свадьбах. Коричневые элементы практически в любой свадьбе – смотрятся красиво.'
+  - var combination = 'Беспроигрышно: с белым, оранжевым, розовым. Стильно: с элементами золота. Модные тренды: с бирюзовым.'
 
-  - var page = {title: 'Коричневая', url: 'color/brown', type: 'color-page', class: 'page color brown', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/brown/brown-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать свадьбу'},}
+  - var page = {title: 'Коричневая', url: 'color/brown', type: 'color-page', class: 'page color brown', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/brown/brown-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать оформление'},}
 
 block content
   +color-page(page)
