--- a/src/app/color/green/index.jade
+++ b/src/app/color/green/index.jade
@@ -2,11 +2,11 @@ extends ../../_layout
 
 block vars
 
-  - var symbol = '<h3>Символика</h3>Главный смысл зеленого цвета – жизнь во всех ее проявлениях. Это цвет юности, гармонии, свежести. Даже небольшие вкрапления зеленого «оживят» любую свадьбу. Кроме этого,  зеленый – это цвет загадки и волшебства.'
-  - var mood = '<h3>Настроение</h3>Цвет свежести и сочности, ассоциируется с зеленой листвой,  травой. Жизнь, зрелость в самой ее сути. Дарит гостям  расслабление, надежность, ощущение отдыха и природы во всей ее красе.'
-  - var combination = '<h3>Сочетания</h3>Беспроигрышно: с белым, красным. Стильно: с элементами желтого. Модные тренды: с золотым и серебряным.'
+  - var symbol = 'Главный смысл зеленого цвета – жизнь во всех ее проявлениях. Это цвет юности, гармонии, свежести. Даже небольшие вкрапления зеленого «оживят» любую свадьбу. Кроме этого,  зеленый – это цвет загадки и волшебства.'
+  - var mood = 'Цвет свежести и сочности, ассоциируется с зеленой листвой,  травой. Жизнь, зрелость в самой ее сути. Дарит гостям  расслабление, надежность, ощущение отдыха и природы во всей ее красе.'
+  - var combination = 'Беспроигрышно: с белым, красным. Стильно: с элементами желтого. Модные тренды: с золотым и серебряным.'
 
-  - var page = {title: 'Зелёная', url: 'color/green', type: 'color-page', class: 'page color green', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/green/green-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать свадьбу'},}
+  - var page = {title: 'Зелёная', url: 'color/green', type: 'color-page', class: 'page color green', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/green/green-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать оформление'},}
 
 block content
   +color-page(page)
