--- a/src/app/color/peach/index.jade
+++ b/src/app/color/peach/index.jade
@@ -2,11 +2,11 @@ extends ../../_layout
 
 block vars
 
-  - var symbol = '<h3>Символика</h3>Сочный персиковый оттенок ассоциируется у людей с ароматом и вкусом сочных, созревших персиков. Дарит чувство наслаждения  от поедания вкусного плода. Эта ассоциация дарит людям ощущение уюта, тепла, комфорта и надежности.'
-  - var mood = '<h3>Настроение</h3>Этот цвет вызывает только положительные, теплые эмоции и приводит к душевной гармонии. Это цвет 100% хорошего настроения.'
-  - var combination = '<h3>Сочетания</h3>Беспроигрышно: с белым, розовым, зеленым. Стильно: с золотым. Модные тренды: с серенити.'
+  - var symbol = 'Сочный персиковый оттенок ассоциируется у людей с ароматом и вкусом сочных, созревших персиков. Дарит чувство наслаждения  от поедания вкусного плода. Эта ассоциация дарит людям ощущение уюта, тепла, комфорта и надежности.'
+  - var mood = 'Этот цвет вызывает только положительные, теплые эмоции и приводит к душевной гармонии. Это цвет 100% хорошего настроения.'
+  - var combination = 'Беспроигрышно: с белым, розовым, зеленым. Стильно: с золотым. Модные тренды: с серенити.'
 
-  - var page = {title: 'Персиковая', url: 'color/peach', type: 'color-page', class: 'page color peach', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/peach/peach-', qnt: 5}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать свадьбу'},}
+  - var page = {title: 'Персиковая', url: 'color/peach', type: 'color-page', class: 'page color peach', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/peach/peach-', qnt: 5}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать оформление'},}
 
 block content
   +color-page(page)
