--- a/src/app/color/pink/index.jade
+++ b/src/app/color/pink/index.jade
@@ -2,11 +2,11 @@ extends ../../_layout
 
 block vars
 
-  - var symbol = '<h3>Символика</h3>Розовый – это общепризнанный цвет романтики, грез и мечтаний. Жизнь в розовом цвете – это своеобразный взгляд на жизнь через «розовые» очки. В свадьбах создает некоторый налет юности, девичества, трогательности.'
-  - var mood = '<h3>Настроение</h3>Нежность и трогательность розового защитит и укроет Вашу свадьбу от будничности и повседневности. У розового - одна из наиболее богатых палитр оттенков.'
-  - var combination = '<h3>Сочетания</h3>Беспроигрышно: с белым, зеленым, серым. Стильно: с элементами коричневого. Модные тренды: с серебром.'
+  - var symbol = 'Розовый – это общепризнанный цвет романтики, грез и мечтаний. Жизнь в розовом цвете – это своеобразный взгляд на жизнь через «розовые» очки. В свадьбах создает некоторый налет юности, девичества, трогательности.'
+  - var mood = 'Нежность и трогательность розового защитит и укроет Вашу свадьбу от будничности и повседневности. У розового - одна из наиболее богатых палитр оттенков.'
+  - var combination = 'Беспроигрышно: с белым, зеленым, серым. Стильно: с элементами коричневого. Модные тренды: с серебром.'
 
-  - var page = {title: 'Розовая', url: 'color/pink', type: 'color-page', class: 'page color pink', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/pink/pink-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать свадьбу'},}
+  - var page = {title: 'Розовая', url: 'color/pink', type: 'color-page', class: 'page color pink', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/pink/pink-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать оформление'},}
 
 block content
   +color-page(page)
