--- a/src/app/color/yellow/index.jade
+++ b/src/app/color/yellow/index.jade
@@ -2,11 +2,11 @@ extends ../../_layout
 
 block vars
 
-  - var symbol = '<h3>Символика</h3>Основная ассоциация желтого – это солнце. Исторически желтый цвет символизирует богатство радость и положительную энергию. Это цвет благополучия, тепла и света. Осуществление всех ваших мечтаний и желаний.'
-  - var mood = '<h3>Настроение</h3>Желтые (или с элементами желтого) свадьбы всегда жизнерадостные, яркие, даже кричащие. Как будто лучики солнца пришли к Вам на свадьбу, чтобы порадовать Вас.'
-  - var combination = '<h3>Сочетания</h3>Беспроигрышно: с серым, синим, белым, зеленым. Стильно: с элементами черного. Модные тренды: с мятным.'
+  - var symbol = 'Основная ассоциация желтого – это солнце. Исторически желтый цвет символизирует богатство радость и положительную энергию. Это цвет благополучия, тепла и света. Осуществление всех ваших мечтаний и желаний.'
+  - var mood = 'Желтые (или с элементами желтого) свадьбы всегда жизнерадостные, яркие, даже кричащие. Как будто лучики солнца пришли к Вам на свадьбу, чтобы порадовать Вас.'
+  - var combination = 'Беспроигрышно: с серым, синим, белым, зеленым. Стильно: с элементами черного. Модные тренды: с мятным.'
 
-  - var page = {title: 'Жёлтая', url: 'color/yellow', type: 'color-page', class: 'page color yellow', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/yellow/yellow-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать свадьбу'},}
+  - var page = {title: 'Жёлтая', url: 'color/yellow', type: 'color-page', class: 'page color yellow', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/yellow/yellow-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать оформление'},}
 
 block content
   +color-page(page)
