--- a/src/app/color/buttercup/index.jade
+++ b/src/app/color/buttercup/index.jade
@@ -2,11 +2,11 @@ extends ../../_layout
 
 block vars
 
-  - var symbol = '<h3>Символика</h3>Это яркий насыщенный желтый цвет, из – за того, что он имеет природную основу он всегда очень гармоничен и наряден.'
-  - var mood = '<h3>Настроение</h3>Лютиковый желты зарядит Вашу свадьбу оптимизмом и однозначно позитивным настроением.'
-  - var combination = '<h3>Сочетания</h3>Беспроигрышно: с белым, зеленым, серым. Стильно: с серебром. Модные тренды: с морским синим.'
+  - var symbol = 'Это яркий насыщенный желтый цвет, из – за того, что он имеет природную основу он всегда очень гармоничен и наряден.'
+  - var mood = 'Лютиковый желтый зарядит Вашу свадьбу оптимизмом и однозначно позитивным настроением.'
+  - var combination = 'Беспроигрышно: с белым, зеленым, серым. Стильно: с серебром. Модные тренды: с морским синим.'
 
-  - var page = {title: 'Лютиково-желтая', url: 'color/buttercup', type: 'color-page', class: 'page color buttrecup', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/buttercup/buttercup-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать свадьбу'},}
+  - var page = {title: 'Лютиково-желтая', url: 'color/buttercup', type: 'color-page', class: 'page color buttrecup', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/buttercup/buttercup-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать оформление'},}
 
 block content
   +color-page(page)
