--- a/src/app/color/gold/index.jade
+++ b/src/app/color/gold/index.jade
@@ -2,11 +2,11 @@ extends ../../_layout
 
 block vars
 
-  - var symbol = '<h3>Символика</h3>Один из наиболее знаковых цветов. Ассоциируется с богатством, роскошью, шиком. Существует поверье, что золотая свадьба навсегда избавит молодых от нужды, их дом будет полная чаша и у них всегда будет достаток.'
-  - var mood = '<h3>Настроение</h3>Теплая, насыщенная, богатая свадьба. Всем будет хотеться к ней прикоснуться и подольше в ней оставаться.'
-  - var combination = '<h3>Сочетания</h3>Беспроигрышно: с белым, розовым, зеленым. Стильно: с элементами черного. Модные тренды: с бирюзовым, красным.'
+  - var symbol = 'Один из наиболее знаковых цветов. Ассоциируется с богатством, роскошью, шиком. Существует поверье, что золотая свадьба навсегда избавит молодых от нужды, их дом будет полная чаша и у них всегда будет достаток.'
+  - var mood = 'Теплая, насыщенная, богатая свадьба. Всем будет хотеться к ней прикоснуться и подольше в ней оставаться.'
+  - var combination = 'Беспроигрышно: с белым, розовым, зеленым. Стильно: с элементами черного. Модные тренды: с бирюзовым, красным.'
 
-  - var page = {title: 'Золотая', url: 'color/gold', type: 'color-page', class: 'page color gold', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/gold/gold-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать свадьбу'},}
+  - var page = {title: 'Золотая', url: 'color/gold', type: 'color-page', class: 'page color gold', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/gold/gold-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать оформление'},}
 
 block content
   +color-page(page)
