--- a/src/app/color/grey/index.jade
+++ b/src/app/color/grey/index.jade
@@ -2,11 +2,11 @@ extends ../../_layout
 
 block vars
 
-  - var symbol = '<h3>Символика</h3>Серый – это цвет хорошего вкуса, благородства, сдержанности и элегантности.  В свадебной традиции – это символ надежности, консервативности, удовлетворенностью жизнью. Перекликается по тону с серебром, что также несет смысл истинного, стабильного достатка.'
-  - var mood = '<h3>Настроение</h3>Создает настроение умиротворенности, неторопливости.  Ваша свадьба – это уголок отдыха и отсутствия раздражителей в наше постоянно ускоряющееся время.'
-  - var combination = '<h3>Сочетания</h3>Беспроигрышно: с белым, желтым, оранжевым. Стильно: с элементами розового. Модные тренды: с зеленым, салатовым.'
+  - var symbol = 'Серый – это цвет хорошего вкуса, благородства, сдержанности и элегантности.  В свадебной традиции – это символ надежности, консервативности, удовлетворенностью жизнью. Перекликается по тону с серебром, что также несет смысл истинного, стабильного достатка.'
+  - var mood = 'Создает настроение умиротворенности, неторопливости.  Ваша свадьба – это уголок отдыха и отсутствия раздражителей в наше постоянно ускоряющееся время.'
+  - var combination = 'Беспроигрышно: с белым, желтым, оранжевым. Стильно: с элементами розового. Модные тренды: с зеленым, салатовым.'
 
-  - var page = {title: 'Серая', url: 'color/grey', type: 'color-page', class: 'page color grey', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/grey/grey-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать свадьбу'},}
+  - var page = {title: 'Серая', url: 'color/grey', type: 'color-page', class: 'page color grey', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/grey/grey-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать оформление'},}
 
 block content
   +color-page(page)
