--- a/src/app/color/violet/index.jade
+++ b/src/app/color/violet/index.jade
@@ -2,11 +2,11 @@ extends ../../_layout
 
 block vars
 
-  - var symbol = '<h3>Символика</h3>Цвет таинственности,  мистики, высшей мудрости. Сочетает в себе порыв красного и смирение, холод синего. В свадьбе демонстрирует необычность и загадочность пары, и их любовной истории.'
-  - var mood = '<h3>Настроение</h3>Беспроигрышен для создания настроения торжественности, глубины, т.к. издавна считался цветом королей и знатных особ.'
-  - var combination = '<h3>Сочетания</h3>Беспроигрышно: с белым, серым, жемчужным. Стильно: с элементами серебра. Модные тренды: с желтым, золотым.'
+  - var symbol = 'Цвет таинственности,  мистики, высшей мудрости. Сочетает в себе порыв красного и смирение, холод синего. В свадьбе демонстрирует необычность и загадочность пары, и их любовной истории.'
+  - var mood = 'Беспроигрышен для создания настроения торжественности, глубины, т.к. издавна считался цветом королей и знатных особ.'
+  - var combination = 'Беспроигрышно: с белым, серым, жемчужным. Стильно: с элементами серебра. Модные тренды: с желтым, золотым.'
 
-  - var page = {title: 'Фиолетовая', url: 'color/violet', type: 'color-page', class: 'page color violet', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/violet/violet-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать свадьбу'},}
+  - var page = {title: 'Фиолетовая', url: 'color/violet', type: 'color-page', class: 'page color violet', content: {symb: symbol, mood: mood, comb: combination}, list: [], slider: {path: 'color/violet/violet-', qnt: 6}, breadcrumbs: [{link: 'color', name: 'Цвет свадьбы'}], button: {text: 'Заказать оформление'},}
 
 block content
   +color-page(page)
