--- a/src/app/about.jade
+++ b/src/app/about.jade
@@ -3,7 +3,7 @@ extends _layout
 block vars
 
   - var txt = 'о НАС СТРАНИЧКА бла бла бла'
-  - var page = {title: 'О нас', url: '', type: 'about', class: 'about list', content: {text: txt },list: []};
+  - var page = {title: 'О нас          ', url: '', type: 'about', class: 'page about', content: {text: txt }};
 
 
 block content
