--- a/src/app/contact.jade
+++ b/src/app/contact.jade
@@ -2,9 +2,9 @@ extends _layout
 
 block vars
 
-  - var txt = 'КОНТАКТЫ СКОРО БУДУТ ЗДЕСЬ'
-  - var page = {title: 'Контакты', url: '', type: 'contact', class: 'contact list', content: {text: txt },list: []};
+  - var txt = '<p> +7 916-888-72-65 <p> +7 926-346-71-80 <p> +7 910-476-61-16 <p> decorsvadby@gmail.com'
+  - var page = {title: 'Контакты', url: '', type: 'contact', class: 'page contact', content: {text: txt },list: []};
 
 
 block content
-  +contact-page(page)
+   +contact-page(page)
