--- a/src/app/style/glamour/index.jade
+++ b/src/app/style/glamour/index.jade
@@ -7,7 +7,7 @@ block vars
   - var flower = 'Роза, гортензия, фаленопсис, цимбидиум, пионы, гиппеаструм, амаранта.';
   - var musthave = 'Обыгрывание каких – нибудь модностей в деталях и элементах. Много богатства: блеск, бриллианты, золото. Красивые драпировки и ткани.';
 
-  - var page = {title: 'Гламур', url: 'style/glomour', type: 'style-page', class: 'page style glomour', content: {desc: description, flow: flower, must: musthave}, list: [], breadcrumbs: [{link: 'style', name: 'Стиль свадьбы'}], slider: {path: 'style/glomour/glomour-', qnt: 6}}
+  - var page = {title: 'Гламур', url: 'style/glamour', type: 'style-page', class: 'page style glamour', content: {desc: description, flow: flower, must: musthave}, list: [], breadcrumbs: [{link: 'style', name: 'Стиль свадьбы'}], slider: {path: 'style/glamour/glamour-', qnt: 6}}
 
 block content
   +style-page(page)
