--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -111,3 +111,5 @@ a, p, h1, h2, h3
 @import "./partials/element"
 @import "./partials/color"
 @import "./partials/zone"
+@import "./partials/contact"
+@import "./partials/about"
