--- a/src/sass/partials/_contact.sass
+++ b/src/sass/partials/_contact.sass
@@ -9,11 +9,11 @@
         padding: 2.3rem 3.8rem
         &:before
           +page_title_ico
-          background: url('/images/style-title-left.svg') no-repeat 0 0
+          background: url('/images/style-subtitle-left.svg') no-repeat 0 0
           left: 0
         &:after
           +page_title_ico
-          background: url('/images/style-title-right.svg') no-repeat 0 0
+          background: url('/images/style-subtitle-right.svg') no-repeat 0 0
           right: 0
   h2
     text-align: center
@@ -29,9 +29,8 @@
           +page_subtitle_ico
           background: url('/images/style-subtitle-right.svg') no-repeat 0 0
           right: 0
-
-.desc
-    text-align: justify
+  .desc
+    text-align: center
     +breakpoint(max-width $break-small)
       +span(12)
     +breakpoint(min-width $break-small)
@@ -42,12 +41,13 @@
       +push(4)
 
   .row .col
-    +breakpoint(max-width $break-small)
+    +breakpoint(max-width 500px)
       +span(12)
     +breakpoint(min-width $break-small)
       +span(6)
     +breakpoint(min-width $break-medium)
       +span(5)
       +push(1)
-  p
-    line-height: 1.5
+p
+  text-align: center
+  line-height: 1.5
