--- a/src/sass/partials/_color.sass
+++ b/src/sass/partials/_color.sass
@@ -3,6 +3,8 @@
     +breakpoint(min-width $break-small)
       margin-top: -2rem
     
+  h3
+    text-align: center  
   h4 
     line-height: 1.5
     color: $color-pink
