--- a/src/app/about.jade
+++ b/src/app/about.jade
@@ -2,7 +2,7 @@ extends _layout
 
 block vars
 
-  - var txt = 'о НАС СТРАНИЧКА бла бла бла'
+  - var txt = 'Мы знаем, как сделать Вашу свадьбу НЕЗАБЫВАЕМОЙ'
   - var page = {title: 'О нас          ', url: '', type: 'about', class: 'page about', content: {text: txt }};
 
 
