--- a/src/app/zone/index.jade
+++ b/src/app/zone/index.jade
@@ -8,7 +8,7 @@ block vars
   - page.list.push({title: 'Президиум', link: 'presidium'})
   - page.list.push({title: 'Столы гостей', link: 'guest-tables'})
   - page.list.push({title: 'Детский стол', link: 'kinder-table'})
-  - page.list.push({title: 'Зона апперитива', link: 'apperitive'})
+  - page.list.push({title: 'Зона аперитива', link: 'apperitive'})
   - page.list.push({title: 'Welcome-зона', link: 'welcome'})
   - page.list.push({title: 'Танцпол', link: 'dance-floor'})
   - page.list.push({title: 'Зона подарков и пожеланий', link: 'gifts-wishes'})
