--- a/src/app/element/arc/index.jade
+++ b/src/app/element/arc/index.jade
@@ -2,14 +2,14 @@ extends ../../_layout
 
 block vars
 
-  - var description = 'То, заветное место, куда жаждет попасть любая детская душа. Цирк. Аттракционы. Веселье.  Клоуны.</p><p>На этот вечер Ваша свадьба взорвется эмоциями радости добра и света.'
+  - var description = 'Конструкция в виде арки символизирует вход в счастливую жизнь молодоженов, после того как они обменяются кольцами.  В некоторых свадебных традициях арка  - это символ небесного свода, который благословляет брак. Четырехопорная арка несет идею нового дома. Арка может  быть любых форм (дуга, п-образные конструкции, шатер, сходящиеся элементы). Она может быть сделана из разных составных элементов: двери, деревья, ткани, вазы. Обильно украшается цветами, зеленью. Стоимость от 12 000 рублей.'
 
-  - var page = {title: 'Венок', url: 'element/arc', type: 'element-page', class: 'page element carnival', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Стиль свадьбы'}], slider: {path: 'element/arc/arc-', qnt: 7}, button: {text: 'Заказать венки'}, list2: []};
+  - var page = {title: 'Арка', url: 'element/arc', type: 'element-page', class: 'page element arc', content: {desc: description}, list: [], breadcrumbs: [{link: 'element', name: 'Элементы'}], slider: {path: 'element/arc/arc-', qnt: 7}, button: {text: 'Заказать оформление арки'}, list2: []};
 
   - page.list.push({title: 'Лестница', link: 'stairway'})
   - page.list.push({title: 'Подвесной декор', link: 'hanging-decor'})
   - page.list.push({title: 'Grand декор', link: 'grand-decor'})
-  - page.list.push({title: 'Дорожки из цветов', link: 'flower-paths'})
+  - page.list.push({title: 'Дорожки из цветов', link: 'flower-path'})
 
   - page.list2.push({title: 'Фотозона', url: 'zone/photo'})
   - page.list2.push({title: 'Президиум', link: 'zone/presidium'})
