--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -104,6 +104,27 @@ a, p, h1, h2, h3
   transition:  $params
 
 
+.email
+  width: 300
+  height: 30
+  font-size: 14pt
+  border-color: $color-pink
+  border-top-style: double
+  -webkit-placeholder: 
+    color: $color-pink;
+
+  -moz-placeholder: { color: $color-pink; }
+
+.message
+  width: 300
+  height: 300
+  font-size: 14pt
+  border-color: $color-pink
+  border-top-style: double
+  vertical-align: top
+  -webkit-placeholder {color: $color-pink;}
+  -moz-placeholder {color: $color-pink;}
+
 @import "./partials/shadow"
 @import "./partials/global"
 @import "./partials/header"
@@ -112,4 +133,5 @@ a, p, h1, h2, h3
 @import "./partials/color"
 @import "./partials/zone"
 @import "./partials/contact"
+@import "./partials/order"
 @import "./partials/about"
